--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -1,78 +1,82 @@
-$base:black;
-$blue:rgb(0, 174, 255);
-$baseText:white;
+$base: black;
+$blue: rgb(0, 174, 255);
+$baseText: white;
 
-.sign-up-cont{
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(91, 112, 131, 0.4);
-    align-items: center;
-    top:0px;
-    left:0px;
-    display: flex;
-    justify-content: center;
-}
-
-.cont{
-    height: 60%;
-    width: 33%;
-    background-color: black;
-    border-radius: 20px;
-    // border: 1px $blue solid;
-    padding: 0px 10px 0px 10px;
-    min-width: 600px;
+.sign-up-cont {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(91, 112, 131, 0.4);
+  align-items: center;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: center;
 }
 
-.head{
-    display: flex;
-    width: 100%;
-    margin-top: 10px;
-}
-.headdiv{
-    width: 49%;
-    display: flex;
-    justify-content: flex-end;
-}
-.icon-m{
-    fill: white;
-    height: 30px;
-    width: 30px;
-}
-.buttonfont{
-    font-size: medium;
-    font-weight: bold;
+.cont {
+  height: 60%;
+  width: 33%;
+  background-color: black;
+  border-radius: 20px;
+  // border: 1px $blue solid;
+  padding: 0px 10px 0px 10px;
+  min-width: 600px;
 }
 
-.button{
-    height: 30px;
-    width: 60px;
-    border-radius: 30px;
+.head {
+  display: flex;
+  width: 100%;
+  margin-top: 10px;
 }
-.nextButton{
-    background-color: $blue;
-    color: $baseText;
-    border: 1px $blue solid;
+.headdiv {
+  width: 49%;
+  display: flex;
+  justify-content: flex-end;
 }
-.nextButton:hover{
-    background-color:rgb(0, 174, 255,0.9);
+.icon-m {
+  fill: white;
+  height: 30px;
+  width: 30px;
 }
-
-
-
-.body{
-    padding: 0px 20px 0px 20px;
-}
-.none{
-    display: none;
-}
-.block{
-    display: block;
+.buttonfont {
+  font-size: medium;
+  font-weight: bold;
 }
 
-.back{
-    background-color: $base;
-    color: $baseText;
-    border: 0px;
-    font-size: large;
+.button {
+  height: 30px;
+  width: 60px;
+  border-radius: 30px;
+}
+.nextButton {
+  background-color: $blue;
+  color: $baseText;
+  border: 1px $blue solid;
+}
+.nextButton:hover {
+  background-color: rgb(0, 174, 255, 0.9);
+}
+
+.body {
+  padding: 0px 20px 0px 20px;
+}
+.none {
+  display: none;
+}
+.block {
+  display: block;
+}
+
+.back {
+  background-color: $base;
+  color: $baseText;
+  border: 0px;
+  font-size: large;
+}
+
+button {
+  &:hover {
+    cursor: pointer;
+  }
 }
