--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -39,7 +39,8 @@
             </svg>
             <p class="thickfont">Happening now</p>
             <p class="bigfont">Join Twitter today.</p>
-            <button class="nav-but buttonfont signupButton" routerLink="/signup">Sign up</button>
+            <button class="nav-but buttonfont signupButton" (click)="signup()"  >Sign up</button>
+            <!--  routerLink="/signup" -->
             <button class="nav-but loginButton buttonfont">Log in</button>
         </div>
     </div>
