--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-signin></app-signin>
 <app-signup></app-signup> -->
 <router-outlet></router-outlet>
+<app-signup class="signup" id="signup"></app-signup>
