--- a/src/app/signup/create/create.component.html
+++ b/src/app/signup/create/create.component.html
@@ -1,18 +1,19 @@
 <p class="bigfont">Create your account</p>
 <form class="form">
     <div class="box">
-        <input type="text" id="name" class="field" formControlName="name">
+        <input type="text" id="name" class="field" >
         <span class="PlaceHolder" id="namesPlaceHolder">Name</span>
+        <!-- <small *ngIf="formGroup.controls['name'].hasError('required')" class="text-danger">Name is Required</small>  -->
     </div>
     <div class="box">
-        <input type="text" id="contact" class="field" formControlName="email">
+        <input type="text" id="contact" class="field" >
         <span class="PlaceHolder" id="contactPlaceHolder">Phone</span>
     </div>
     <div class="box bottom">
-        <input type="mailOrNum" id="birthday" class="field" formControlName="email">
+        <input type="mailOrNum" id="birthday" class="field" >
         <span class="PlaceHolder" id="birthdayPlaceHolder">Birth date</span>
     </div>
     <p class="smallfont">By signing up, you agree to the <a class="link">Terms of Service</a> and <a class="link">Privacy Policy</a>, including <a class="link">Cookie Use</a>. Others will be able to find you by email or phone number when provided · <a class="link">Privacy Options</a></p>
-    <input class="nav-but buttonfont signupButton" type="submit" value="Sign up">
-    <!-- <button class="nav-but buttonfont signupButton" (click)="signup()"  >Sign up</button> -->
+    <!-- <input class="nav-but buttonfont signupButton" type="submit" value="Sign up"> -->
+    <div class="nav-but buttonfont signupButton" (click)="next()"><span class="butcent">Sign up</span></div>
 </form>
