validations and button-disabling

--- a/src/app/signup/password/password.component.html
+++ b/src/app/signup/password/password.component.html
@@ -3,6 +3,6 @@
 <div class="box" [formGroup]="staticformGroup">
     <input type="password" class="field" id="pass" formControlName="password">
     <span class="PlaceHolder" id="passwordPlaceHolder">Password</span>
-    <small *ngIf="staticformGroup.controls['password'].invalid" class="text-danger">invalid value</small>
+    <small *ngIf="staticformGroup.controls['password'].touched && staticformGroup.controls['password'].invalid" class="text-danger">invalid value</small>
 </div>
 <a class="link" (click)="toggle()"> Reveal password</a>
