--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,9 +4,9 @@
             <div>
                 <button class="back none" id="back" (click)="back()" >X</button>
             </div>
-            <div class="smallfont none" id="step3"><span>step 3 of 5</span></div>
-            <div class="smallfont none" id="step4"><span>step 4 of 5</span></div>
-            <div class="smallfont none" id="step5"><span>step 5 of 5</span></div>
+            <div class="smallfont none" id="step3"><span>Step 3 of 5</span></div>
+            <div class="smallfont none" id="step4"><span>Step 4 of 5</span></div>
+            <div class="smallfont none" id="step5"><span>Step 5 of 5</span></div>
 
             <div class="headdiv" id="box-icon">
                 <svg viewBox="0 0 24 24" class="icon-m">
@@ -18,7 +18,7 @@
                 </svg>
             </div>
             <div class="headdiv">
-                <button class="nextButton button buttonfont" (click)="next()" id="next">
+                <button class="nextButton button buttonfont" (click)="next()" id="next" disabled=true>
                     Next
                 </button>
             </div>
